fix: video-wraper

--- a/assets/frontend/css/main.css
+++ b/assets/frontend/css/main.css
@@ -3793,10 +3793,10 @@ input.main-search-input:-ms-input-placeholder {
   position: relative; }
   @media only screen and (min-width: 768px) and (max-width: 991px) {
     .video-wrapper {
-      min-height: 400px; } }
+      min-height: 100%; } }
   @media (max-width: 767px) {
     .video-wrapper {
-      min-height: 300px; } }
+      min-height: 100%; } }
   .video-wrapper .popup-video {
     position: absolute;
     top: 50%;
